# SHessYoachServer

./: .gitignore  CMakeLists.txt  app.py  compile_commands.json  main.cpp  requestParser.cpp  requestParser.hpp  run  server.cpp  server.hpp  sqlRequests.cpp  sqlRequests.hpp  start_command.txt
.cache/clangd/index/: main.cpp.62314E913CA3A0EE.idx  server.cpp.986767C43A1432ED.idx  server.hpp.DAFBEA30485C941D.idx
templates/: index.html
